logs/_wait_champ2.log
=== CHAMPION 스택 (E22->E29->E34) vs RayDPT baseline — HONEST 지표 ===
  File "<string>", line 8
    print(f"{lab:24} MAE={d[\x27MAE\x27]:.4f} RMSE={d[\x27RMSE\x27]:.4f} AbsRel={d[\x27AbsRel\x27]:.4f} d1={d[\x27delta1\x27]:.3f} comp={comp(d):.3f}")
                                                                                                                                                      ^
SyntaxError: f-string expression part cannot include a backslash
